<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
    tools:context="newmap.mapfeatures.signup">

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColorLink="@android:color/darker_gray" />

    <EditText
        android:id="@+id/email_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorLink="@android:color/darker_gray" />

    <EditText
        android:id="@+id/phn_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/mobile"
        android:inputType="phone"
        android:textColorLink="@android:color/darker_gray" />

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:textColor="@android:color/black"
        android:textColorLink="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="I am :"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="-32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/gender_male"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:background="@android:color/darker_gray"
            android:text="male"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/gender_female"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/darker_gray"
            android:text="female"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/gender_other"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/darker_gray"
            android:text="other"
            android:textColor="#ffffff" />

    </LinearLayout>

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColorLink="@android:color/darker_gray" />

    <EditText
        android:id="@+id/signup_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorLink="@android:color/darker_gray" />

    <TextView
        android:id="@+id/signup_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="0dp"
        android:text="Save" />
</LinearLayout>
